# autonomous-ml

./: BUILD.bazel  MODULE.bazel  create_project_structure.py  requirements.txt
.devcontainer/: Dockerfile
ml-autonomous-car/: .bazelrc
ml-autonomous-car/.devcontainer/: devcontainer.json
ml-autonomous-car/src/: data.py  train.py
src/: infer.py  model.py
