module(
    name = "ml_autonomous_car",
    version = "0.1.0",
    compatibility_level = 1,
)

bazel_dep(name = "rules_python", version = "0.30.0")

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(python_version = "3.11")
use_repo(python, "python_3_11")